feat: added CNN architecture

--- a/algorithms/deep_q_learning/tests/notebook.ipynb
+++ b/algorithms/deep_q_learning/tests/notebook.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cebf8fdc",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def preprocess(prev_frame: Path | str, current_frame: Path | str) -> Path | str:\n",
     "    # Read the input frames to get a 3D array: (rows x cols x channels)\n",
@@ -147,26 +147,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac4993f2",
+   "execution_count": 10,
+   "id": "9d288176",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CNN:\n",
-    "    # Initialize the architecture\n",
-    "    def __init__(self, num_layers):\n",
-    "        self.num_layers = num_layers\n",
+    "def conv2d_output_size(input_size, kernel_size, stride, padding=0):\n",
+    "    \"\"\"\n",
+    "    Calculate the output size of a 2D convolutional layer.\n",
+    "    \n",
+    "    Formula: output_size = (input_size - kernel_size + 2*padding) / stride + 1\n",
+    "    \n",
+    "    Args:\n",
+    "        input_size: Input height/width (int or tuple)\n",
+    "        kernel_size: Kernel size (int or tuple)\n",
+    "        stride: Stride (int or tuple)\n",
+    "        padding: Padding (int or tuple, default=0)\n",
+    "    \n",
+    "    Returns:\n",
+    "        Output size (int or tuple)\n",
+    "    \"\"\"\n",
+    "    if isinstance(input_size, tuple):\n",
+    "        # Handle tuple input (height, width)\n",
+    "        h, w = input_size\n",
     "        \n",
-    "    def "
+    "        # Handle kernel_size - convert int to tuple if needed\n",
+    "        if isinstance(kernel_size, tuple):\n",
+    "            k_h, k_w = kernel_size\n",
+    "        else:\n",
+    "            k_h = k_w = kernel_size\n",
+    "        \n",
+    "        # Handle stride - convert int to tuple if needed\n",
+    "        if isinstance(stride, tuple):\n",
+    "            s_h, s_w = stride\n",
+    "        else:\n",
+    "            s_h = s_w = stride\n",
+    "        \n",
+    "        # Handle padding - convert int to tuple if needed\n",
+    "        if isinstance(padding, tuple):\n",
+    "            p_h, p_w = padding\n",
+    "        else:\n",
+    "            p_h = p_w = padding\n",
+    "        \n",
+    "        o_h = (h - k_h + 2 * p_h) // s_h + 1\n",
+    "        o_w = (w - k_w + 2 * p_w) // s_w + 1\n",
+    "        return (int(o_h), int(o_w))\n",
+    "    else:\n",
+    "        # Handle single dimension\n",
+    "        k = kernel_size if isinstance(kernel_size, int) else kernel_size[0]\n",
+    "        s = stride if isinstance(stride, int) else stride[0]\n",
+    "        p = padding if isinstance(padding, int) else padding[0]\n",
+    "        return int((input_size - k + 2 * p) // s + 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be1c9b66",
+   "execution_count": 11,
+   "id": "002d5345",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ac4993f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DQN(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Deep Q-Network architecture as described in the DQN paper.\n",
+    "    \n",
+    "    Architecture:\n",
+    "    - Input: 4 stacked grayscale frames (84x84 each)\n",
+    "    - CONV1: 32 filters, 8x8 kernel, stride 4, ReLU\n",
+    "    - CONV2: 64 filters, 4x4 kernel, stride 2, ReLU\n",
+    "    - CONV3: 64 filters, 3x3 kernel, stride 1, ReLU\n",
+    "    - FC: 512 hidden units, ReLU\n",
+    "    - Output: num_actions (one Q-value per action)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, num_actions=2, input_size=(84, 84)):\n",
+    "        super(DQN, self).__init__()\n",
+    "        self.num_actions = num_actions\n",
+    "        \n",
+    "        # First convolutional layer: 32 filters, 8x8 kernel, stride 4\n",
+    "        self.conv1 = nn.Conv2d(in_channels=4, out_channels=32, kernel_size=8, stride=4)\n",
+    "        \n",
+    "        # Calculate output size after conv1\n",
+    "        conv1_output_size = conv2d_output_size(input_size, kernel_size=8, stride=4)\n",
+    "        \n",
+    "        # Second convolutional layer: 64 filters, 4x4 kernel, stride 2\n",
+    "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=4, stride=2)\n",
+    "        \n",
+    "        # Calculate output size after conv2\n",
+    "        conv2_output_size = conv2d_output_size(conv1_output_size, kernel_size=4, stride=2)\n",
+    "        \n",
+    "        # Third convolutional layer: 64 filters, 3x3 kernel, stride 1\n",
+    "        self.conv3 = nn.Conv2d(in_channels=64, out_channels=64, kernel_size=3, stride=1)\n",
+    "        \n",
+    "        # Calculate output size after conv3\n",
+    "        conv3_output_size = conv2d_output_size(conv2_output_size, kernel_size=3, stride=1)\n",
+    "        \n",
+    "        # Calculate flattened feature size dynamically\n",
+    "        flattened_size = 64 * conv3_output_size[0] * conv3_output_size[1]\n",
+    "        \n",
+    "        # Fully connected layer: 512 hidden units\n",
+    "        self.fc1 = nn.Linear(flattened_size, 512)\n",
+    "        \n",
+    "        # Output layer: one Q-value per action\n",
+    "        self.fc2 = nn.Linear(512, num_actions)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass through the network.\n",
+    "        \n",
+    "        Args:\n",
+    "            x: Input tensor of shape (batch_size, 4, 84, 84)\n",
+    "            \n",
+    "        Returns:\n",
+    "            Q-values for each action, shape (batch_size, num_actions)\n",
+    "        \"\"\"\n",
+    "        # First convolutional layer + ReLU\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        \n",
+    "        # Second convolutional layer + ReLU\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        \n",
+    "        # Third convolutional layer + ReLU\n",
+    "        x = F.relu(self.conv3(x))\n",
+    "        \n",
+    "        # Flatten the feature map\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        \n",
+    "        # Fully connected layer + ReLU\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        \n",
+    "        # Output layer (Q-values for each action)\n",
+    "        x = self.fc2(x)\n",
+    "        \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "be1c9b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model architecture:\n",
+      "DQN(\n",
+      "  (conv1): Conv2d(4, 32, kernel_size=(8, 8), stride=(4, 4))\n",
+      "  (conv2): Conv2d(32, 64, kernel_size=(4, 4), stride=(2, 2))\n",
+      "  (conv3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (fc1): Linear(in_features=3136, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=2, bias=True)\n",
+      ")\n",
+      "\n",
+      "Input shape: torch.Size([1, 4, 84, 84])\n",
+      "Output shape: torch.Size([1, 2])\n",
+      "Expected output shape: (1, 2) - one Q-value per action\n",
+      "\n",
+      "Q-values: tensor([[0.0080, 0.0024]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the DQN model architecture\n",
+    "# Create a model instance\n",
+    "model = DQN(num_actions=2)\n",
+    "\n",
+    "# Create a dummy input: batch_size=1, 4 stacked frames, 84x84 grayscale\n",
+    "dummy_input = torch.randn(1, 4, 84, 84)\n",
+    "\n",
+    "# Forward pass\n",
+    "with torch.no_grad():\n",
+    "    output = model(dummy_input)\n",
+    "\n",
+    "print(f\"Model architecture:\")\n",
+    "print(model)\n",
+    "print(f\"\\nInput shape: {dummy_input.shape}\")\n",
+    "print(f\"Output shape: {output.shape}\")\n",
+    "print(f\"Expected output shape: (1, 2) - one Q-value per action\")\n",
+    "print(f\"\\nQ-values: {output}\")\n"
+   ]
   },
   {
    "cell_type": "code",
